src/popup/popup.scss
@use "sass:color";
@use "../styles/vars";
@import url("https://fonts.googleapis.com/css2?family=Ubuntu:wght@400;700&display=swap");

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

body {
  font-family: "Ubuntu", sans-serif;
  color: vars.$color-text;
  background-color: vars.$color-background;
  padding: 1rem;
  width: vars.$popup-width;
  overflow: hidden;
  text-overflow: ellipsis;
}

header {
  display: flex;
  justify-content: space-between;
  gap: 1em;

  h1 {
    font-size: 1.4em;
  }
}

.header-icons {
  display: flex;
  gap: 1em;
}

hr {
  margin: 0.5em 0;
}

ul {
  list-style-type: none;
}

.icon {
  cursor: pointer;
  @include vars.icon-animation;

  &:hover {
    transform: scale(120%);
  }

  &-disabled {
    pointer-events: none;
    @include vars.disabled;
  }

  &-title {
    font-size: 1.5em;
  }

  &-settings:hover::before {
    transform: rotate(40deg);
  }

  &#{&}-hidden {
    display: none;
  }
}

.tab-group {
  font-weight: bold;
  width: calc(vars.$popup-width - 2rem);

  &:not(:last-child) {
    margin-bottom: 0.5em;
  }

  &-shown {
    &::before {
      content: "▼";
      margin-right: 0.25em;
    }
  }

  &-hidden {
    &::before {
      content: "►";
      margin-right: 0.25em;
    }
  }

  &-title {
    width: 100%;
    display: inline-flex;
    justify-content: space-between;

    &-text {
      width: calc(vars.$popup-width - 2rem - 10em);
      @include vars.hidden-text;

      &-active {
        cursor: pointer;
      }
    }

    &-icons {
      display: flex;
      gap: 0.5em;
    }
  }

  &-tabs {
    width: calc(vars.$popup-width - 2rem - 1.3em);
    font-weight: normal;
    padding-left: 1.3em;

    &-tab {
      margin: 0.5em 0;
      display: inline-flex;
      align-items: center;
      max-width: calc(100% - 2em);

      &-favicon {
        width: 1em;
        height: 1em;
        margin-right: 0.5em;
        cursor: pointer;
      }

      &-title {
        display: inline-block;
        @include vars.hidden-text;
        cursor: pointer;
      }

      &-non-interactive {
        color: color.adjust(vars.$color-text, $lightness: -20%);
        pointer-events: none;
        cursor: default;
      }

      &-visible {
        color: color.adjust(vars.$color-text, $lightness: -20%);
      }
    }
  }
}

.group-form {
  margin-top: 1.5em;
  display: flex;
  flex-direction: column;
  align-items: center;
  gap: 0.5em;

  &-title {
    margin-bottom: 0.5em;
    text-align: center;
    font-weight: bold;
    max-width: 70%;
    @include vars.hidden-text;
  }

  &-label {
    width: 100%;
    display: flex;
    justify-content: space-between;
  }

  &-input {
    width: 60%;
    padding: 0.4em;
    border: none;
    border-radius: 0.4em;
    transition: outline 0.1s ease-in-out;

    &:focus {
      outline: 0.2em solid color.adjust(vars.$color-background, $lightness: 50%);
    }
  }

  &-color-indicator {
    cursor: default;
    pointer-events: none;

    &-unselected {
      @include vars.disabled;
      cursor: pointer;
      pointer-events: all;
    }
  }

  &-icons {
    width: 100%;
    display: flex;
    justify-content: flex-end;
    gap: 0.5em;
    margin-top: 0.5em;
  }
}

